minor tweaks and junk removal

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ padding: 10px 0 0;
   min-width: 48px;
   overflow:visible;
   text-align: center;
-  cursor: default;
+  cursor: pointer;
   margin:0 10px 0 0;
   padding:4px 10px 4px 10px;
   float:left;
