--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ td span {display: inline-block; margin: 6px 0;  }
     height:16px;
 }
 
-#flash {border:1px solid #BBB; padding:8px; font-size:12px; margin-bottom:10px; border-radius:4px; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);}
+#flash {border:1px solid #BBB; padding:8px; margin-bottom:10px; border-radius:4px; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);}
 
 #flash.error {
   color: #B94A48;
@@ -147,7 +147,7 @@ td span {display: inline-block; margin: 6px 0;  }
   font-family: Helvetica;
   float: right;
   font-weight: bold;
-  font-size: 18px 
+  font-size: 20px 
 }
 
 #flash a:hover.close  {
