added support for course dropping, minor tweak and bug fixes

--- a/js/libs/templates/course.handlebars
+++ b/js/libs/templates/course.handlebars
@@ -1,4 +1,4 @@
-<tr data-crn='{{CRN}}'>
+<tr data-crn='{{CRN}}' data-registered='{{Registered}}'>
 	<td>{{bool Registered}}</td>
 	<td>
 	{{#if Link}}
