--- a/css/style.css
+++ b/css/style.css
@@ -502,4 +502,6 @@ table.tablesorter thead tr .headerSortDown {
     background-color: #ffff99; 
     cursor: pointer;
 }
-
+#dialog {
+  display: none;
+}
