added coloring for deadlines

--- a/js/libs/templates/notification.handlebars
+++ b/js/libs/templates/notification.handlebars
@@ -1,4 +1,4 @@
-<div id="flash" class="warn">
+<div id="flash" class="{{color endDate}}">
 	<a href="#" class="close">×</a>
 	<div>
 		<img alt="logo" src="images/glyphicons_warning_sign.png" width="10" height="10">
